--- a/RMS/templates/Food_menu.html
+++ b/RMS/templates/Food_menu.html
@@ -27,9 +27,11 @@
     <!-- Menu area start -->
     {%for food_items in food%}
     <div class="food-items">
-        <img src="/media/{{food_items.food_pic}}"  onClick="document.location='{%url 'FoodOrder' food_items.id  %}'"alt="food_pic">
-        <form action="food_order/{{food_items.id}}/">
-        </form>
+     {%if food_items.food_pic %} 
+            <img src="/media/{{food_items.food_pic}}"  onClick="document.location='{%url 'FoodOrder' food_items.id  %}'"alt="food_pic">
+    {%else%}
+            <img src="../static/Table.jpg" alt="table_pic"  class = "profile_pic">
+    {%endif%}
     <div class="details">
         <div class="details-sub">
             <h5>
@@ -41,7 +43,7 @@
                 <input type="submit" id = "submit{{food_items.Food_Name}}" hidden>
             </form>
             </h5>
-             {%if food_items|is_discount:request.session.cart %}
+             {%if food_items|is_discount %}
             <h5 class="price">&#8377; {{food_items|discount_calculater:request.session.cart}}({{food_items.Discount_In_Percentage}}% off)</h5>
             {%else%}
             <h5 class="price">&#8377; {{food_items.Food_Price}}</h5>
@@ -109,7 +111,6 @@
          <li><a href="{%url 'MyOrders'%}">Orders</a><span class = "badge badge-info">{{ord|length}}</span></li>
         <li><a href="{%url 'AddCart'%}">Cart</a><span class = "badge badge-info">{{request.session.cart.keys|length}}</span>
         </li>
-        <li> <a href="{%url 'Contact'%}">Contact</a></li>
     </ul>
 </div>
 <!-- nav area end -->
