--- a/Restaurant_Management_System/static/css/Cart.css
+++ b/Restaurant_Management_System/static/css/Cart.css
@@ -327,3 +327,102 @@ body{
     display: block;
     text-align: center;
 }
+
+
+
+@media (max-width: 800px) {
+    /* nav bar */
+    
+    .nav ul{
+        list-style: none;
+    }
+    .nav{
+      display: inline-block;
+      text-align: center;
+      position: absolute;
+      top: 27%;
+      left: 44%;
+      transform: translate(-50%, -50%);
+    }
+    .nav li:hover{
+        background: #ff553b;
+    }
+     .nav>ul{
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: inline-block;
+        background: #313131;
+        color: rgb(255, 255, 255);
+        width: 394px;
+        text-transform: uppercase;
+        font-weight: 900;
+    }
+    .nav>ul>li>a{
+        
+        color: #fff;
+        text-decoration: none;
+        font-size: 10px;
+    }
+    
+    .nav> ul > li{
+        position: relative;
+        cursor: pointer;
+        font-size: 11px;
+        letter-spacing: 2px;
+        float: left;
+        width: 72px;
+        height: 39px;
+        line-height: 39px;
+    }}
+
+
+    @media (max-width: 490px) {
+        /* nav bar */
+        
+        .nav ul{
+            list-style: none;
+        }
+        .nav{
+          display: inline-block;
+          text-align: center;
+          position: absolute;
+          top: 27%;
+          left: 51%;
+          transform: translate(-50%, -50%);
+        }
+        .nav li:hover{
+            background: #ff553b;
+        }
+         .nav>ul{
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: inline-block;
+            background: #313131;
+            color: rgb(255, 255, 255);
+            width: 394px;
+            text-transform: uppercase;
+            font-weight: 900;
+        }
+        .nav>ul>li>a{
+            
+            color: #fff;
+            text-decoration: none;
+            font-size: 10px;
+        }
+        
+        .nav> ul > li{
+            position: relative;
+            cursor: pointer;
+            font-size: 11px;
+            letter-spacing: 2px;
+            float: left;
+            width: 72px;
+            height: 39px;
+            line-height: 39px;
+        }}
+    
+    
+     
+    
