--- a/Restaurant_Management_System/static/css/Food_menu.css
+++ b/Restaurant_Management_System/static/css/Food_menu.css
@@ -129,7 +129,7 @@ form{
     display: inline-block;
     background: #313131;
     color: rgb(255, 255, 255);
-    width: 1000px;
+    width: 805px;
     text-transform: uppercase;
     font-weight: 900;
 }
@@ -150,66 +150,7 @@ form{
     line-height: 50px;
 }
 
-   .menu .dropdown{
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding: 0;
-}
-  .dropdown li{
-    background: #313131;
-    
-    display:none;
-}
-.dropdown li form{
-    display: inline;
-}
-.menu .dropdown li:hover{
-    background: #ff553b;
-}
-.nav  li:hover >.dropdown{
-    perspective: 100px;
-}
-.nav li:hover >.dropdown li{
-transform-origin: top center;
-opacity: 0;
-display: block;
-} 
-.nav   li:hover > .dropdown li:nth-child(1) {
-    animation: animate 300ms ease-in-out forwards;
-    animation-delay: -150ms;
-}
-.nav  li:hover > .dropdown li:nth-child(2) {
-    animation: animate 300ms ease-in-out forwards;
-    animation-delay: -150ms;
-}
-.nav   li:hover > .dropdown li:nth-child(3) {
-    animation: animate 300ms ease-in-out forwards;
-    animation-delay: 0ms;
-}
-.nav  li:hover > .dropdown li:nth-child(4) {
-    animation: animate 300ms ease-in-out forwards;
-    animation-delay: 300ms;
-}
-.nav  li:hover > .dropdown li:nth-child(5) {
-    animation: animate 300ms ease-in-out forwards;
-    animation-delay: 450ms;
-}
-@keyframes animate {
-    0%{
-        opacity: 0;
-        transform: translateX(-100);
-    }
-    70%{
-        transform: translateX(20px);
-    }
-    100%{
-        opacity: 1;
-        transform: translateX(0px);
-    }
    
-} 
 
 
 /* Filter Bar */
@@ -252,6 +193,7 @@ section ul li.active{
 
 
 /* Search Bar */
+
 .main
 {
     position: absolute;
@@ -277,5 +219,89 @@ section ul li.active{
      color: #fff;
      background: #e06973 ;
      border: none;
+ }
+
+ @media (max-width: 800px) {
+    /* nav bar */
+    .nav ul{
+        list-style: none;
+    }
+    .nav{
+        display: inline-block;
+        text-align: center;
+        position: absolute;
+        top: 26%;
+        left: 51%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .nav li:hover{
+        background: #15eca5;
+    }
+     .nav>ul{
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: inline-block;
+        background: #313131;
+        color: rgb(255, 255, 255);
+        width: 394px;
+        text-transform: uppercase;
+        font-weight: 900;
+    }
+    .nav>ul>li>a{
+        
+        color: #fff;
+        text-decoration: none;
+        font-size: 13px;
+    }
+    
+    
+    .nav> ul > li{
+        position: relative;
+        cursor: pointer;
+        font-size: 15px;
+        letter-spacing: 2px;
+        float: left;
+        width: 95px;
+        height: 38px;
+        line-height: 43px;
+    }}
+    
+       
+    
+    
+    /* Nav Bar end */
+    /* Search area start */
+
+    .main
+    {
+        position: absolute;
+        top: -1%;
+        left: 2%;
+    }
+     input[type = text]{
+        height: 36px;
+        width: 184px;
+        border: 2px solid #eb7e87;
+        border-radius: 50px;
+     }
+     .btn{
+        display: inline;
+    padding: 1px 0px;
+     }
+     .btn-btn{
+        padding: 10px 15px;
+    margin: 1px;
+    font-size: 11px;
+    font-weight: 600;
+    border-radius: 50px;
+    color: #fff;
+    background: #e06973;
+    border: none;
+     }
+    
+    
+    /* Search area end  */
  }
  
