--- a/Restaurant_Management_System/static/css/Payment.css
+++ b/Restaurant_Management_System/static/css/Payment.css
@@ -207,7 +207,66 @@ span.price {
   .col-25 {
       margin-bottom: 20px;
   }
-}
+
+  /* nav bar */
+  
+  .nav ul{
+      list-style: none;
+  }
+  .nav{
+    display: inline-block;
+    text-align: center;
+    position: absolute;
+    top: 27%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .nav li:hover{
+      background: #ff553b;
+  }
+   .nav>ul{
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: inline-block;
+      background: #313131;
+      color: rgb(255, 255, 255);
+      width: 394px;
+      text-transform: uppercase;
+      font-weight: 900;
+  }
+  .nav>ul>li>a{
+      
+      color: #fff;
+      text-decoration: none;
+      font-size: 13px;
+  }
+  
+  .nav> ul > li{
+    position: relative;
+    cursor: pointer;
+    font-size: 15px;
+    letter-spacing: 2px;
+    float: left;
+    width: 74px;
+    height: 50px;
+    line-height: 50px;
+  }}
+  
+   
+  @media (max-width: 490px) {
+    .nav{
+      display: inline-block;
+      text-align: center;
+      position: absolute;
+      top: 36%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  
+  
+  }
+  
 
 /* Pop button  */
 
