--- a/RMS/templates/profile_page.html
+++ b/RMS/templates/profile_page.html
@@ -28,7 +28,7 @@
 <!-- Header area end -->
   <!-- main section area start -->
   <div class="main_2">
-    <img src="/media/{{user.profile_pic}}" height="100px" width="75px" alt="">
+    <img src="/media/{{user.profile_pic}}" class = "img" height="100px" width="75px" alt="">
        <form action="profile" method = "POST" enctype="multipart/form-data" >{%csrf_token%}
 
         <div class="information">
