--- a/Restaurant_Management_System/static/css/Food_Order.css
+++ b/Restaurant_Management_System/static/css/Food_Order.css
@@ -295,7 +295,7 @@ form.col-2 {
   display: inline-block;
   text-align: center;
   position: absolute;
-  top: 27%;
+  top: 32%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -342,6 +342,37 @@ form.col-2 {
     transform: translate(-50%, -50%);
   }
 
+
+
+  
+ .nav>ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  background: #313131;
+  color: rgb(255, 255, 255);
+  width: 394px;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+.nav>ul>li>a{
+  
+  color: #fff;
+  text-decoration: none;
+  font-size: 13px;
+}
+
+.nav> ul > li{
+position: relative;
+cursor: pointer;
+font-size: 15px;
+letter-spacing: 2px;
+float: left;
+width: 74px;
+height: 50px;
+line-height: 50px;
+}
 
 }
 
