--- a/Restaurant_Management_System/static/css/profile_page.css
+++ b/Restaurant_Management_System/static/css/profile_page.css
@@ -206,7 +206,211 @@ label #sidebar_btn :hover{
 }
 
 @media (max-width: 800px) {
+    
+  /* form group */
 
+
+  form{
+    position: fixed;
+    background: linear-gradient(to right,#fff,#ccc);
+    left: 25%;
+    top: 28%;
+    width: 258px;
+    height: 377px;
+    margin: 10px auto;
+      
+  }
+  .main_2 .alert {
+   
+    line-height: 37;
+    padding: 0px 50px;
+    margin: 5px auto;
+    left: 50px;
+    height: 50px;
+    color: green;
+    font-weight: 600;
+  }
   
+  input{
+    display: block;
+    border-left: none;
+    border-top: none;
+    border-right: none;
+      padding: 5px 30px;
+      margin: 10px auto;
+      justify-content: center;
+  }
+  #btn{
+    top: 95%;
+    left: 40%;
+    position: absolute;
+    width: 110px;
+    height: 10%;
+    background: linear-gradient(to right,#faca47,#a1fc10);
+    border-radius: 30px;
+    transition: .5s;
+  }
+  form .information{
+    justify-content: center;
+    text-align: center;
+  }
+  form .information h1{
+    color:black;
+    
+  }
 
-}
+
+  /* form group end */
+    
+  .main{
+      top: 36%;
+      left: 35%;
+      position: absolute;
+  }
+  .main_2{
+    top: 30%;
+    left: 22%;
+    position: fixed;
+    width: 210px;
+    height: 354px;
+    background: linear-gradient(to right,#11eb73,#06cdff);
+    padding: 25px 40px;
+  }
+  .button {
+      display: inline-block;
+      border-radius: 4px;
+      background-color: #0fb3be;
+      border: none;
+      color: #FFFFFF;
+      text-align: center;
+      font-size: 20px;
+      padding: 20px;
+      width: 200px;
+      transition: all 0.5s;
+      cursor: pointer;
+      margin: 5px;
+    }
+    
+    .button_edit {
+      background-color: #f4511e;
+      border: none;
+      color: white;
+      padding: 16px 32px;
+      text-align: center;
+      font-size: 16px;
+      margin: 4px 2px;
+      opacity: 0.6;
+      transition: 0.3s;
+      display: inline-block;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    
+    .button_edit:hover {opacity: 1}
+    .button span {
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      transition: 0.5s;
+    }
+    
+    .button span:after {
+      content: '\00bb';
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: -20px;
+      transition: 0.5s;
+    }
+    
+    .button:hover span {
+      padding-right: 25px;
+    }
+    
+    .button:hover span:after {
+      opacity: 1;
+      right: 0;
+    }
+  
+    /* slider button */
+  
+  #check{
+      display: none;
+  }
+  
+  
+  #check:checked ~ .sidebar{
+      left: -190px;
+  }
+  #check:checked ~ .sidebar a span{
+      display: none;
+  
+  }
+  #check:checked ~.sidebar a{
+      font-size: 20px;
+      margin-left: 170px;
+      width: 80px;
+  }
+  
+  
+  label #sidebar_btn{
+      z-index: 1;
+      color: #fff;
+      position: fixed;
+      cursor: pointer;
+      left: 238px;
+      font-size: 20px;
+      margin: 5px 0;
+      transition: 0.5s;
+      transition-property: color;
+      }
+      label #sidebar_btn :hover{
+          color: #1983D3;
+      }
+  /* Slider button end */
+  /* H3 logo */
+  header{
+      position: fixed;
+      background:#22242A;
+      padding: 20px;
+      width: 100%;
+      height: 30px;
+  }
+  
+  .left_area h3{
+      color: #fff;
+      margin: 0;
+      text-transform: uppercase;
+      font-size: 17px;
+      font-weight: 900;
+  }
+  .left_area span{
+      color: #1DC4E7;
+  }
+  
+  /* H3 logo and */
+  
+  
+  
+  
+  
+  .logout_btn{
+      padding: 5px;
+      background: #198303;
+      text-decoration: none;
+      float: right;
+      margin-top: -22px;
+      margin-right: 40px;
+      border-radius: 2px;
+      font-size: 15px;
+      font-weight: 600;
+      color: #fff;
+      transition: 0.5s;
+      transition-property:background ;
+  }
+  .img{
+    top: -134px;
+    position: relative;
+  }
+      }
+  
