--- a/Restaurant_Management_System/static/css/sstyle.css
+++ b/Restaurant_Management_System/static/css/sstyle.css
@@ -97,7 +97,7 @@ ul{
     display: inline-block;
     background: #313131;
     color: rgb(255, 255, 255);
-    width: 800px;
+    width: 600px;
     text-transform: uppercase;
     font-weight: 900;
 }
@@ -498,3 +498,103 @@ h1.header-w3ls {
 }
 }
 /*--//responsive--*/
+
+
+
+
+@media (max-width: 800px) {
+    /* nav bar */
+        
+    .nav ul{
+        list-style: none;
+    }
+    .nav{
+        display: inline-block;
+        text-align: center;
+        position: absolute;
+        top: 24%;
+        left: 49%;
+      transform: translate(-50%, -50%);
+    }
+    .nav li:hover{
+        background: #ff553b;
+    }
+     .nav>ul{
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: inline-block;
+        background: #313131;
+        color: rgb(255, 255, 255);
+        width: 460px;
+        text-transform: uppercase;
+        font-weight: 900;
+    }
+    .nav>ul>li>a{
+        
+        color: #fff;
+        text-decoration: none;
+        font-size: 10px;
+    }
+    
+    .nav> ul > li{
+        position: relative;
+        cursor: pointer;
+        font-size: 11px;
+        letter-spacing: 2px;
+        float: left;
+        float: left;
+        width: 113px;
+        height: 39px;
+        line-height: 39px;
+    }}
+
+
+    @media (max-width: 450px) {
+        /* nav bar */
+        
+        .nav ul{
+            list-style: none;
+        }
+        .nav{
+            display: inline-block;
+    text-align: center;
+    position: absolute;
+    top: 24%;
+    left: 54%;
+    transform: translate(-50%, -50%);
+        }
+        .nav li:hover{
+            background: #ff553b;
+        }
+         .nav>ul{
+            list-style: none;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    background: #313131;
+    color: rgb(255, 255, 255);
+    width: 381px;
+    text-transform: uppercase;
+    font-weight: 900;
+        }
+        .nav>ul>li>a{
+            
+            color: #fff;
+            text-decoration: none;
+            font-size: 8px;
+        }
+        
+        .nav> ul > li{
+            position: relative;
+            cursor: pointer;
+            font-size: 11px;
+            letter-spacing: 2px;
+            float: left;
+            float: left;
+            width: 113px;
+            height: 39px;
+            line-height: 39px;
+        }}
+    
+    
