This is for deployment

--- a/RMS/templates/MyBooking.html
+++ b/RMS/templates/MyBooking.html
@@ -20,14 +20,10 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{%static '/css/MyOrders.css' %}">
+  <link rel="stylesheet" href="{%static '/css/MyBooking.css' %}">
   <title>Shoping Cart</title>
 </head>
 
-<body>
-
-  <!-- Header area -->
-  <div class="menu">
 
     <div class="heading">
       <h1>KAILASH DA DHABA</h1>
@@ -50,13 +46,23 @@
   </div>
   <!-- nav area end -->
 
-  <div class="container">
-    <div class="border rounded p-4 m-4">
-      <div class="display-4">MY Bookings</div>
-      <table class="table">
-
-        <thead>
-          <tr>
+ <!---Hero Section-->
+ <section id="hero">
+    <div class="hero-container">
+    <div class="hero-logo">
+      <h1 class="font-weight-bold">My Bookings</h1>
+  </div>
+        </div>
+</section>
+<!---End of Hero Section-->
+<!--Cart Section-->
+<section class="mt-5">
+    <div class="container">
+        <div class="cart">
+        <div class="table-responsive">
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
             <th scope="col">Sno</th>
             <th scope="col">Table</th>
              <th scope="col">Table Number</th>
@@ -66,8 +72,8 @@
             <th scope="col">Booking Conform</th>
             <th scope="col">Cancle Booking</th>
           </tr>
-        </thead>
-        <tbody>
+                </thead>
+               <tbody>
         {% if bookings %}
         {% for booking in bookings %}
           <tr>
@@ -144,17 +150,16 @@
           <h1>No Bookings</h1>
         </div>
         {% endif %}
-      </table>
-
+            </table>
+        </div>
+        </div>
     </div>
-  </div>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script>
+</section>
+</div>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
 {% for msg in messages %}
   swal("Thank You!", '{{msg}}', "success");
 {%endfor%}
-  </script>
-  
-</body>
 
-</html>
+</script>
