--- a/RMS/templates/Food_menu.html
+++ b/RMS/templates/Food_menu.html
@@ -25,6 +25,7 @@
     </div>
     <!-- Header area finish -->
     <!-- Menu area start -->
+    {%if food %}
     {%for food_items in food%}
     <div class="food-items">
      {%if food_items.food_pic %} 
@@ -77,7 +78,13 @@
     </div>
     
     </div>
-    {%endfor%}
+    {% endfor %}
+    {% else %}
+     <div class="text-center">
+          <h1>Not Found</h1>
+        </div>
+    {% endif%}
+    
 </div>
 
 <!-- Filter Bar -->
