--- a/RMS/templates/Food_Order.html
+++ b/RMS/templates/Food_Order.html
@@ -28,10 +28,16 @@
           <div class = "product-imgs">
             <div class = "img-display">
               <div class = "img-showcase">
-               <img src = "/media/{{food.food_pic}}" alt = "Food image">
+               {%if food.food_pic %} 
+                 <img src = "/media/{{food.food_pic}}" alt = "Food image">
                 <img src = "/media/{{food.food_pic}}" alt = "Food image">
                 <img src = "/media/{{food.food_pic}}" alt = "Food image">
                 <img src = "/media/{{food.food_pic}}" alt = "Food image">
+    {%else%}
+            <img src="../static/download.png" alt="food_pic" class = "profile_pic">
+    {%endif%}
+    
+             
               
                 
               </div>
@@ -182,7 +188,7 @@
                    {%if comment.user.profile_pic %} 
              <img src="/media/{{comment.user.profile_pic}}" />
             {%else%}
-            <img src="../static/user.png" alt="user_profile_pic"  class = "profile_pic">
+            <img src="../css/user.png" alt="user_profile_pic"  class = "profile_pic">
             {%endif%}
                      
                   </div>
