--- a/Restaurant_Management_System/static/css/profile_page.css
+++ b/Restaurant_Management_System/static/css/profile_page.css
@@ -391,9 +391,14 @@ label #sidebar_btn :hover{
   /* H3 logo and */
   
   
-  
-  
-  
+  img.profile_img {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    margin-bottom: 10px;
+}
+
+
   .logout_btn{
       padding: 5px;
       background: #198303;
