--- a/RMS/templates/About.html
+++ b/RMS/templates/About.html
@@ -5,6 +5,7 @@
 
 <head>
 	<meta charset="UTF-8" />
+	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
  <link href='https://www.soengsouy.com/favicon.ico' rel='icon' type='image/x-icon'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -57,7 +58,7 @@ https://templatemo.com/tm-539-simple-house
 					<div class="row tm-header-inner">
 						<div class="col-md-6 col-12">
 							<div class="tm-site-text-box">
-								<h1 class="tm-site-title">Kalish Da Dhaba</h1>
+								<h1 class="tm-site-title">Kailash Da Dhaba</h1>
 							</div>
 						</div>
 					</div>
@@ -67,9 +68,8 @@ https://templatemo.com/tm-539-simple-house
 
 		<main>
 			<header class="row tm-welcome-section">
-				<h2 class="col-12 text-center tm-section-title">About Simple House</h2>
-				<p class="col-12 text-center">This is about page of simple house template. 
-                You can modify and use this HTML template for your website. Total 3 HTML pages included in this template. Header image has a parallax effect.</p>
+				<h2 class="col-12 text-center tm-section-title">About Kailash Da Dhaba</h2>
+				<p class="col-12 text-center">Serving up a simply straightforward (and straight-up savory) menu of Indian classics like pav bhaji, aloo paratha, gobi paratha, kachori and samosa, an extensive desserts menu highlighting the best biodynamic and organic sweets from our country and world class starters from around the world, Kailash Da Dhaba is a poem to India and its culture.  </p>
 			</header>
 
 			<div class="tm-container-inner tm-persons">
@@ -78,11 +78,9 @@ https://templatemo.com/tm-539-simple-house
 						<figure class="tm-person">
 							<img src="img/about-01.jpg" alt="Image" class="img-fluid tm-person-img" />
 							<figcaption class="tm-person-description">
-								<h4 class="tm-person-name">Jennifer Soft</h4>
+								<h4 class="tm-person-name">Nikhil Gupta</h4>
 								<p class="tm-person-title">Founder and CEO</p>
-								<p class="tm-person-about">Vivamus cursus leo nec sem feugiat sagittis.
-								Duis ut feugiat odio, sit amet accumsan
-								odio.</p>
+								<p class="tm-person-about">Student at JK Lakshmipat University.</p>
 								<div>
 									<a href="https://fb.com" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
 									<a href="https://twitter.com" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
@@ -95,10 +93,9 @@ https://templatemo.com/tm-539-simple-house
 						<figure class="tm-person">
 							<img src="img/about-02.jpg" alt="Image" class="img-fluid tm-person-img" />
 							<figcaption class="tm-person-description">
-								<h4 class="tm-person-name">Daisy Walker</h4>
-								<p class="tm-person-title">Executive Chef</p>
-								<p class="tm-person-about">Praesent non vulputate elit. Orci varius
-								natoque et magnis dis parturient, nascetur ridiculus mus.</p>
+								<h4 class="tm-person-name">Ritik Gupta</h4>
+								<p class="tm-person-title">Executive Halwai and Culinary Director</p>
+								<p class="tm-person-about">Ritik Maharaj is the best at what he does.</p>
 								<div>
 									<a href="https://fb.com" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
 									<a href="https://twitter.com" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
@@ -108,27 +105,11 @@ https://templatemo.com/tm-539-simple-house
 					</article>
 					<article class="col-lg-6">
 						<figure class="tm-person">
-							<img src="img/about-03.jpg" alt="Image" class="img-fluid tm-person-img" />
-							<figcaption class="tm-person-description">
-								<h4 class="tm-person-name">Florence Nelson</h4>
-								<p class="tm-person-title">Kitchen Manager</p>
-								<p class="tm-person-about">Aenean sapien sem, ultricies sed vulputate
-								et, auctor vel mauris. Integer sit amet diam eget est facilisis lacinia vitae.</p>
-								<div>
-									<a href="https://fb.com" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
-									<a href="https://instagram.com" class="tm-social-link"><i class="fab fa-instagram tm-social-icon"></i></a>
-								</div>
-							</figcaption>
-						</figure>
-					</article>
-					<article class="col-lg-6">
-						<figure class="tm-person">
 							<img src="img/about-04.jpg" alt="Image" class="img-fluid tm-person-img" />
 							<figcaption class="tm-person-description">
-								<h4 class="tm-person-name">Valentina Martin</h4>
-								<p class="tm-person-title">Culinary Director</p>
-								<p class="tm-person-about">Praesent non vulputate elit. Orci varius
-								natoque penatibus et magnis montes, nascetur ridiculus mus.</p>
+								<h4 class="tm-person-name">Prasan Chandak</h4>
+								<p class="tm-person-title">CFO </p>
+								<p class="tm-person-about">Student at JK Lakshmipat University.</p>
 								<div>
 									<a href="https://fb.com" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
 									<a href="https://twitter.com" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
@@ -144,12 +125,12 @@ https://templatemo.com/tm-539-simple-house
 				<div class="row">
 					<div class="col-12">
 						<div class="placeholder-2">
-							<div class="parallax-window-2" data-parallax="scroll" data-image-src="img/about-05.jpg"></div>		
+							<div class="parallax-window-2" data-parallax="scroll" data-image-src="../static/bg1.jpg"></div>		
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="tm-container-inner tm-features">
+			<!-- <div class="tm-container-inner tm-features">
 				<div class="row">
 					<div class="col-lg-4">
 						<div class="tm-feature">
@@ -173,16 +154,16 @@ https://templatemo.com/tm-539-simple-house
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="tm-container-inner tm-history">
 				<div class="row">
 					<div class="col-12">
 						<div class="tm-history-inner">
-							<img src="img/about-06.jpg" alt="Image" class="img-fluid tm-history-img" />
+							<img src="../static/bg1.jpg" alt="Image" class="img-fluid tm-history-img" />
 							<div class="tm-history-text"> 
 								<h4 class="tm-history-title">History of our restaurant</h4>
-								<p class="tm-mb-p">Sed ligula risus, interdum aliquet imperdiet sit amet, auctor sit amet justo. Maecenas posuere lorem id augue interdum vehicula. Praesent sed leo eget libero ultricies congue.</p>
-								<p>Redistributing this template as a downloadable ZIP file on any template collection site is strictly prohibited. You will need to <a href="https://templatemo.com/contact">contact TemplateMo</a> for additional permissions about our templates. Thank you.</p>
+								<p class="tm-mb-p">Ammi Jaan kaha karti thi..... Koi Dhandha chotaa nahi hota Aur Dhandhe se bada koi Dharm nahi hota.</p> <p> Aur <strong>Modi Ji</strong> kehte hain mitron..... <strong>Make In India</strong> to hamne job chod di aur dhaba khol liya.</p><br>
+								<p>To mitron welcome to our restaurant. We hope you like the experience.   <a href="{%url 'Contact' %}" style="text-decoration: none;">Contact Us</a> for other sewa. <br> Khama Ghani Sa.</p>
 							</div>
 						</div>	
 					</div>
