--- a/RMS/templates/Contact.html
+++ b/RMS/templates/Contact.html
@@ -71,7 +71,7 @@ https://templatemo.com/tm-539-simple-house
 		<main>
 			<header class="row tm-welcome-section">
 				<h2 class="col-12 text-center tm-section-title">Contact Form</h2>
-				<p class="col-12 text-center"> to send email to your inbox. You can modify and use this template for your website. Header image has a parallax effect. Total 3 HTML pages included in this template.</p>
+				<p class="col-12 text-center">Contact us for any feedback, complaints or suggestions.  </p>
 			</header>
 
 			<div class="tm-container-inner-2 tm-contact-section">
@@ -79,11 +79,11 @@ https://templatemo.com/tm-539-simple-house
 					<div class="col-md-6">
 						<form action="{{request.path}}" method="POST" class="tm-contact-form">{% csrf_token %}
 					        <div class="form-group">
-					          <input type="text" name="Name" class="form-control" placeholder="Name"  value = "{{user.Name}}" disabled />
+					          <input type="text" name="Name" class="form-control" placeholder="Name"  value = "{{user.Name}}"  />
 					        </div>
 					        
 					        <div class="form-group">
-					          <input type="email" name="Email" class="form-control"  value = "{{user.email}}" placeholder="Email" disabled />
+					          <input type="email" name="Email" class="form-control"  value = "{{user.email}}" placeholder="Email" />
 					        </div>
 				
 					        <div class="form-group">
@@ -101,13 +101,15 @@ https://templatemo.com/tm-539-simple-house
 						<div class="tm-address-box">
 							<h4 class="tm-info-title tm-text-success">Our Address</h4>
 							<address>
-								180 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus 10550
+								 Kholi number 420, Macchi Talao, Dockyard Lane, Opp. Prawn's Corner, Mumbai, Maharastra-India, <br>
+								 Earth, the Solar System, Oort Cloud, Local Fluff, Local Bubble, Orion Arm, Milky Way Galaxy, Local Group, Virgo Supercluster, Laniakea Supercluster, Universe.
+
 							</address>
 							<a href="tel:080-090-0110" class="tm-contact-link">
-								<i class="fas fa-phone tm-contact-icon"></i>080-090-0110
+								<i class="fas fa-phone tm-contact-icon"></i>141-1729-420
 							</a>
 							<a href="mailto:info@company.co" class="tm-contact-link">
-								<i class="fas fa-envelope tm-contact-icon"></i>info@company.co
+								<i class="fas fa-envelope tm-contact-icon"></i>Kalashbhai.co
 							</a>
 							<div class="tm-contact-social">
 								<a href="https://fb.com/templatemo" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
