--- a/RMS/templates/Contact.html
+++ b/RMS/templates/Contact.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link href='https://www.soengsouy.com/favicon.ico' rel='icon' type='image/x-icon'/>
-    <title>Kalash Da Dhaba - Contact Page</title>
+	<link href='../static/gs.jpg' rel='icon' type='image/x-icon'/>
+    <title>Chef Gusteau's - Contact Page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" />
     
     <link rel="stylesheet" href="{%static '/css/allmin.css'%}">
@@ -24,7 +24,7 @@ https://templatemo.com/tm-539-simple-house
 	<!-- header area start -->
 
     <div class="heading">
-      <h1>KAILASH DA DHABA</h1>
+      <h1>CHEF GUSTEAU'S</h1>
       <h3>&mdash; CONTACT US &mdash;</h3>
 
     </div>
@@ -60,7 +60,7 @@ https://templatemo.com/tm-539-simple-house
 					<div class="row tm-header-inner">
 						<div class="col-md-6 col-12">
 							<div class="tm-site-text-box">
-								<h1 class="tm-site-title">Kailash Da Dhaba</h1>
+								<h1 class="tm-site-title">CHEF GUSTEAU'S</h1>
 							</div>
 						</div>
 					</div>
@@ -109,7 +109,7 @@ https://templatemo.com/tm-539-simple-house
 								<i class="fas fa-phone tm-contact-icon"></i>141-1729-420
 							</a>
 							<a href="mailto:info@company.co" class="tm-contact-link">
-								<i class="fas fa-envelope tm-contact-icon"></i>Kalashbhai.co
+								<i class="fas fa-envelope tm-contact-icon"></i>gusteaus.co
 							</a>
 							<div class="tm-contact-social">
 								<a href="https://fb.com/templatemo" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
@@ -142,9 +142,8 @@ https://templatemo.com/tm-539-simple-house
 		</main>
 
 		<footer class="tm-footer text-center">
-			<p>Copyright &copy; 2021 Kailash Da Dhaba 
-            
-            | Design: <a rel="nofollow" href="{%url 'Home'%}">Go to Home Page</a></p>
+			<p>Copyright &copy; 2021 Chef Gusteau's 
+            </p>
 		</footer>
 	</div>
 	<script src="js/jquery.min.js"></script>
