--- a/RMS/templates/Login_Registration.html
+++ b/RMS/templates/Login_Registration.html
@@ -3,12 +3,12 @@
 <html lang="en">
 
 <head>
-<link href='https://www.soengsouy.com/favicon.ico' rel='icon' type='image/x-icon'/>
+<link href='../static/gs.jpg' rel='icon' type='image/x-icon'/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{%static '/css/login_registration.css' %}">
-    <title>Restaurant Management System | Sign Up</title>
+    <title>CHEF GUSTEAU'S | Sign Up</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                 <div class = "check-box"></div>
                 <div class="forget_password">
                 
-                    <a href = "{%url 'reset_password'%}">forget password </a>
+                    <a href = "{%url 'reset_password'%}">forgot password </a>
                 </div>
             </form>
             <form action="register" class="input-group" id="register" method = "POST">{%csrf_token%}
